crates/test-files/fixtures/compile_errors/call_with_pub_fns.fe
contract Foo {
    pub fn __call__() {}

    fn bar() {}

    pub fn baz() {}

    pub fn bing() {}
}
